# auroraview

./: CHANGELOG.md  Cargo.toml  pyproject.toml
docs/api/: qt-webview.md
python/auroraview/integration/qt/: _core.py
tests/python/integration/: test_qt_lifecycle.py  test_qt_zombie_fix.py
tests/python/unit/integration/qt/: test_core_zombie_guards.py
